--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,9 @@
     <div class="container-lg px-3 my-5 markdown-body">
       {% if site.title and site.title != page.title %}
       <!-- <h1><img src="https://raw.githubusercontent.com/oxwhirl/whirl.github.io/master/assets/img/cropped-whirl_favicon.png?token=ABTHN3R3H4KWN5UCD6IATRDBQ7YC4"><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1> -->
-      <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
+      <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a>
+      <a href="./pages/people.html" class="btn">People</a>
+      </h1>
       {% endif %}
 
       {{ content }}
