--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,14 @@
     <div class="container-lg px-3 my-5 markdown-body">
       {% if site.title and site.title != page.title %}
       <!-- <h1><img src="https://raw.githubusercontent.com/oxwhirl/whirl.github.io/master/assets/img/cropped-whirl_favicon.png?token=ABTHN3R3H4KWN5UCD6IATRDBQ7YC4"><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1> -->
-      <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a>
-      <a href="./pages/people.html" class="btn">People</a>
+      <h1 id="main_bar">
+      <!-- <a href="{{ "/" | absolute_url }}">{{ site.title }}</a> -->
+      <img id="whirl_logo" src="https://raw.githubusercontent.com/oxwhirl/home/master/assets/img/whirl_large_cropped-1024x445.png?token=ABTHN3SFFFVJL7XLEDMOG4LBRK65U" >
+      <div id="page_buttons">
+      <a href="/index.html" class="btn">Home</a>
+      <a href="/pages/people.html" class="btn">People</a>
+      <a href="/pages/join.html" class="btn">Join</a>
+      </div>
       </h1>
       {% endif %}
 
