--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,11 @@
       <img id="whirl_logo" src="https://raw.githubusercontent.com/oxwhirl/home/master/assets/img/whirl_large_cropped-1024x445.png?token=ABTHN3SFFFVJL7XLEDMOG4LBRK65U" >
       <div id="page_buttons">
       <a href="/index.html" class="btn">Home</a>
+      <a href="/pages/research.html" class="btn">Research</a>
       <a href="/pages/people.html" class="btn">People</a>
       <a href="/pages/join.html" class="btn">Join</a>
+      <a href="/pages/reading_group.html" class="btn">Reading Group</a>
+      <a href="/pages/contact.html" class="btn">Contact</a>
       </div>
       </h1>
       {% endif %}
