--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,5 +15,12 @@
     display: inline;
     position: absolute;
     right: 0;
-    bottom: 10px;
+    bottom: 11px;
+}
+
+#page_buttons a {
+    font-size: 15px;
+    color: #395c7e;
+    padding-right: 15px;
+    padding-left: 15px;
 }
