--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,9 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       {% if site.title and site.title != page.title %}
-      <!-- <h1><img src="https://raw.githubusercontent.com/oxwhirl/whirl.github.io/master/assets/img/cropped-whirl_favicon.png?token=ABTHN3R3H4KWN5UCD6IATRDBQ7YC4"><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1> -->
       <h1 id="main_bar">
       <!-- <a href="{{ "/" | absolute_url }}">{{ site.title }}</a> -->
-      <img id="whirl_logo" src="https://raw.githubusercontent.com/oxwhirl/home/master/assets/img/whirl_large_cropped-1024x445.png?token=ABTHN3SFFFVJL7XLEDMOG4LBRK65U" >
+      <img id="whirl_logo" src="https://github.com/oxwhirl/home/blob/master/assets/img/whirl_large_cropped-1024x445.png?raw=true" >
       <div id="page_buttons">
       <a href="/index.html" class="btn">Home</a>
       <a href="/pages/research.html" class="btn">Research</a>
