--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "jekyll-theme-primer";
 
 #main_bar {
-    position: relative;
+    // position: relative;
 }
 
 #whirl_logo {
@@ -12,15 +12,41 @@
 }
 
 #page_buttons {
-    display: inline;
-    position: absolute;
-    right: 0;
-    bottom: 11px;
+    // display: inline;
+    // position: absolute;
+    // right: 0;
+    // bottom: 11px;
 }
 
 #page_buttons a {
     font-size: 15px;
     color: #395c7e;
     padding-right: 15px;
-    padding-left: 15px;
+    // padding-left: 15px;
+}
+
+.topnav .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
 }
