--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,10 +30,12 @@
 }
 
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+    .topnav a {display: none;}
     .topnav a.icon {
-      float: right;
       display: block;
+      position: absolute;
+      top: 30px;
+      right: 0;
     }
 }
 
