--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,26 +3,25 @@
 
 @import "jekyll-theme-primer";
 
-#main_bar {
-    // position: relative;
-}
-
 #whirl_logo {
     width: 25% 
 }
 
-#page_buttons {
-    // display: inline;
-    // position: absolute;
-    // right: 0;
-    // bottom: 11px;
+#topnav {
+    position: relative;
 }
 
-#page_buttons a {
+#topnav a {
     font-size: 15px;
     color: #395c7e;
     padding-right: 15px;
-    // padding-left: 15px;
+}
+
+#topnav a.icon {
+    position: absolute;
+    padding-right: 0;
+    top: 0;
+    right: 0;
 }
 
 .topnav .icon {
