--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,12 @@
       <div class="topnav" id="topnav">
       <img id="whirl_logo" src="https://github.com/oxwhirl/home/blob/master/assets/img/whirl_large_cropped-1024x445.png?raw=true">
       <div class="page_buttons">
-      <a href="/index.html" class="btn">Home</a>
-      <a href="/pages/research.html" class="btn">Research</a>
-      <a href="/pages/people.html" class="btn">People</a>
-      <a href="/pages/join.html" class="btn">Join</a>
-      <a href="/pages/reading_group.html" class="btn">Reading Group</a>
-      <a href="/pages/contact.html" class="btn">Contact</a>
+      <a href="/home/index.html" class="btn">Home</a>
+      <a href="/home/pages/research.html" class="btn">Research</a>
+      <a href="/home/pages/people.html" class="btn">People</a>
+      <a href="/home/pages/join.html" class="btn">Join</a>
+      <a href="/home/pages/reading_group.html" class="btn">Reading Group</a>
+      <a href="/home/pages/contact.html" class="btn">Contact</a>
       </div>
       <a href="javascript:void(0);" class="icon" onclick="expand()">
         <i class="fa fa-bars"></i>
