Update img links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       <h1 id="main_bar">
       <!-- <a href="{{ "/" | absolute_url }}">{{ site.title }}</a> -->
       <div class="topnav" id="topnav">
-      <img id="whirl_logo" src="https://github.com/oxwhirl/home/blob/master/assets/img/whirl_large_cropped-1024x445.png?raw=true">
+      <img id="whirl_logo" src="/assets/img/whirl_large_cropped-1024x445.png">
       <div class="page_buttons">
       <a href="/index.html" class="btn">Home</a>
       <a href="/pages/research.html" class="btn">Research</a>
